# aiswitch

./: .gitignore  .prettierrc.yml  Cargo.toml  LICENSE  example_config.toml  flake.nix  main.html
.github/workflows/: abomination.yml  build-static.yml  release-frontend.yml  release-static-binary.yml  test.yml
frontend/: index.html  package.json
frontend/src/: App.vue  api.ts
src/: api.rs  main.rs  models.rs  runner.rs  serve_config.rs  spa.rs
