[package]
name = "aiswitch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1" }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.19.1"
